fixed spacing and spelling errors

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -78,7 +78,7 @@ h1{
     border: 2px solid $blue-mid;
     text-transform: uppercase;
     font-weight: 600;
-    font-size: 1.1em;
+    font-size: 1.0em;
     color: $blue-mid;
     margin-bottom: 2.5em;
     border-radius: 0!important;
@@ -108,10 +108,22 @@ h1{
 
 @media only screen and (min-width: 785px) {
   h1{
-    font-size: 2em;
+    font-size: 2.2em;
     i{
       font-size: 1.8em;
     }
+  }
+
+  .main{
+    margin-top: 9.8em;
+  }
+
+  .declarations{
+    margin-top: 1.2em;;
+  }
+
+  .end-text{
+    margin: 2.2em 0 1.2em;
   }
 
   .submit-btn{
@@ -124,6 +136,9 @@ h1{
 }
 
 @media only screen and (min-width: 970px) {
+  .declaration-text{
+    margin-left: 1.8em;
+  }
   .submit-btn{
     width: 41.667%;
   }
